[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/laser.gd" type="Script" id=1]
[ext_resource path="res://assets/scenario_and_items/laser.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 17.9499
height = 40.0

[node name="laser_boss" type="Area2D"]
scale = Vector2( 5, 5 )
collision_layer = 2048
script = ExtResource( 1 )

[node name="laser_img" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="laser_shape" type="CollisionShape2D" parent="."]
position = Vector2( 10, 0 )
rotation = 1.5708
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="notifier" type="VisibilityNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_laser_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_laser_boss_body_entered"]
[connection signal="screen_exited" from="notifier" to="." method="_on_notifier_screen_exited"]
